--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>com.sdk</groupId>
     <artifactId>open-sdk</artifactId>
     <version>1.0.0</version>
     <properties>
@@ -29,11 +29,7 @@
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
          </dependency>
-       <!-- <dependency>
-                 <groupId>org.slf4j</groupId>
-                 <artifactId>slf4j-log4j12</artifactId>
-                 <version>${slf4j.version}</version>
-        </dependency>-->
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
